// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox controlled input behaviour should allow updating of the checked state 1`] = `
<div>
  <div
    class="googlesitekit-component-gm3__checkbox"
  >
    <md-checkbox
      id="checkbox-id"
      name="checkbox-name"
      role="checkbox"
      value="checkbox-value"
    />
    <label
      for="checkbox-id"
    >
      Checkbox Label
    </label>
  </div>
</div>
`;

exports[`Checkbox controlled input behaviour should allow updating of the checked state 2`] = `
<div>
  <div
    class="googlesitekit-component-gm3__checkbox"
  >
    <md-checkbox
      checked=""
      id="checkbox-id"
      name="checkbox-name"
      role="checkbox"
      value="checkbox-value"
    />
    <label
      for="checkbox-id"
    >
      Checkbox Label
    </label>
  </div>
</div>
`;

exports[`Checkbox controlled input behaviour should allow updating of the checked state 3`] = `
<div>
  <div
    class="googlesitekit-component-gm3__checkbox"
  >
    <md-checkbox
      id="checkbox-id"
      name="checkbox-name"
      role="checkbox"
      value="checkbox-value"
    />
    <label
      for="checkbox-id"
    >
      Checkbox Label
    </label>
  </div>
</div>
`;

exports[`Checkbox controlled input behaviour should correctly invoke onChange and retain its checked state when clicked 1`] = `
<div>
  <div
    class="googlesitekit-component-gm3__checkbox"
  >
    <md-checkbox
      checked=""
      id="checkbox-id"
      name="checkbox-name"
      role="checkbox"
      value="checkbox-value"
    />
    <label
      for="checkbox-id"
    >
      Checkbox Label
    </label>
  </div>
</div>
`;

exports[`Checkbox controlled input behaviour should correctly invoke onChange and retain its checked state when clicked 2`] = `
<div>
  <div
    class="googlesitekit-component-gm3__checkbox"
  >
    <md-checkbox
      checked=""
      id="checkbox-id"
      name="checkbox-name"
      role="checkbox"
      value="checkbox-value"
    />
    <label
      for="checkbox-id"
    >
      Checkbox Label
    </label>
  </div>
</div>
`;

exports[`Checkbox controlled input behaviour should correctly invoke onChange and retain its unchecked state when clicked 1`] = `
<div>
  <div
    class="googlesitekit-component-gm3__checkbox"
  >
    <md-checkbox
      id="checkbox-id"
      name="checkbox-name"
      role="checkbox"
      value="checkbox-value"
    />
    <label
      for="checkbox-id"
    >
      Checkbox Label
    </label>
  </div>
</div>
`;

exports[`Checkbox controlled input behaviour should correctly invoke onChange and retain its unchecked state when clicked 2`] = `
<div>
  <div
    class="googlesitekit-component-gm3__checkbox"
  >
    <md-checkbox
      id="checkbox-id"
      name="checkbox-name"
      role="checkbox"
      value="checkbox-value"
    />
    <label
      for="checkbox-id"
    >
      Checkbox Label
    </label>
  </div>
</div>
`;

exports[`Checkbox should render the checkbox 1`] = `
<div>
  <div
    class="googlesitekit-component-gm3__checkbox"
  >
    <md-checkbox
      id="checkbox-id"
      name="checkbox-name"
      role="checkbox"
      value="checkbox-value"
    />
    <label
      for="checkbox-id"
    >
      Checkbox Label
    </label>
  </div>
</div>
`;
